# brandy

./: .gitignore
.github/workflows/: api.yml
services/api/: Dockerfile  format.sh  package.json  pyproject.toml  requirements.txt  serverless.yml
services/api/api/: llm.py  main.py
services/api/tests/: test_main.py  tests.py
services/brandy/: package-lock.json  package.json
services/brandy/app/: globals.css  page.tsx
services/brandy/components/: brandy.tsx  form.tsx  results.tsx
services/lambda/: cdk.json  package-lock.json  package.json
services/lambda/lib/: lambda-stack.ts
